@@ -1,0 +1,11 @@
+label	rs_label	mask
+rs12265218	rs12265218	CACAGTCACTTCTTCAAAGCTTTGCC[A/G]CAGAAGCTACAAGCATTATTTCCAC
+rs11981089	rs11981089	TACCTTAGGTTCACTAAATATAATAA[C/T]GACATTCAGTACCCAGGAACTACTA
+rs7625376	rs7625376	AGCCAGTGTCCAGTAGTCCCTGAAAG[A/G]TCTGATTTCCCCCTCCCCTCAGTAC
+rs741592	rs741592	GGAAGGAAGAAATAAAATATTACATG[C/G]AGAGCATTTCAGCACTATGTCTGGC
+rs8078079	rs8078079	CCGACCTAGTAGGCAA[A/G]TAGACACTGAGGCTGA
+rs9567736	rs9567736	AGGTCTATGTTAATAC[A/G]GAATCAGTTTCTCACC
+rs4693427	rs4693427	AGATTACCATGCAGGA[A/T]CTGTTCTGAGATTAGC
+rs4757019	rs4757019	TCTACCTCTGTGACTA[C/G]AAGTGTTCTTTTATTT
+rs7958813	rs7958813	AAGGCAATACTGTTCA[C/T]ATTGTATGGAAAGAAG
+
