@@ -140,6 +140,8 @@ import bl.vl.app.importer.data_sample
 import bl.vl.app.importer.data_object
 import bl.vl.app.importer.data_collection
 import bl.vl.app.importer.marker_definition
+import bl.vl.app.importer.markers_set
+
 
 
 class App(object):
@@ -154,6 +156,7 @@ class App(object):
     bl.vl.app.importer.data_object.do_register(self.supported_submodules)
     bl.vl.app.importer.data_collection.do_register(self.supported_submodules)
     bl.vl.app.importer.marker_definition.do_register(self.supported_submodules)
+    bl.vl.app.importer.markers_set.do_register(self.supported_submodules)
 
   def make_parser(self):
     parser = argparse.ArgumentParser(description="A magic importer")
